<resources>
    <string name="app_name">SQLiteApp</string>

    <string name="welcome_to_company_app">Welcome to Company App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>

    <string name="add_emloyee">Add Emloyee</string>


    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="salary">Salary</string>
    <string name="jop">Jop</string>
    <string name="save">Save</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>


</resources>
