<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeInfo"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/blue">

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableStart="@drawable/icons8_undo_48"
        android:onClick="back_btn"
        android:background="@color/blue" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:text="@string/address"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:text="@string/salary"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/jop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:text="@string/jop"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/update"
            android:layout_marginTop="40dp"
            android:layout_gravity=""
            android:background="@drawable/btns"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="5dp"
            android:onClick="toUpdateEmployee"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/delete"
            android:layout_marginTop="40dp"
            android:background="@drawable/btns"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="5dp"
            android:layout_alignParentEnd="true"
            android:onClick="delete"/>

    </RelativeLayout>




</LinearLayout>